--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "hono-lambda-sam-template",
   "type": "module",
   "scripts": {
-    "build": "esbuild --bundle --outfile=./dist/index.js --platform=node --target=node20 ./src/index.ts",
-    "zip": "zip -j lambda.zip dist/index.js",
-    "update": "aws lambda update-function-code --zip-file fileb://lambda.zip --function-name hello",
-    "deploy": "run-s build zip update"
+    "local:delete": "samlocal delete --no-prompts",
+    "local:build": "samlocal build",
+    "local:deploy": "samlocal deploy --no-confirm-changeset --no-fail-on-empty-changeset",
+    "localstack": "run-s local:delete local:build local:deploy"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
-    "esbuild": "^0.21.4",
     "npm-run-all2": "^6.2.0"
   },
   "dependencies": {
