chore: add environment variables for LocalStack services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     ports:
       - 4566:4566            
       - 4510-4559:4510-4559  # external services port range
+    environment:
+      - SERVICES=logs,lambda,apigateway,s3,cloudformation,iam
     env_file:
       - .env
     volumes:
