--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm-run-all2": "^6.2.0"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.859.0",
     "@aws-sdk/client-secrets-manager": "^3.859.0",
     "hono": "^4.8.10",
     "install": "^0.13.0",
