--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.859.0",
     "@aws-sdk/client-secrets-manager": "^3.859.0",
+    "@squilla/hono-aws-middlewares": "^1.0.0",
     "hono": "^4.8.10",
     "install": "^0.13.0",
     "npm": "^11.5.2"
